# NucleoFindWebApp

./: .gitignore
cartographer-backend/: CMakeCache.txt  CMakeLists.txt  Makefile  build.sh  cmake_install.cmake  get_sources.sh
cartographer-backend/gemmi/: CMakeLists.txt  Makefile  cmake_install.cmake
cartographer-backend/src/: cartographer-backend.cpp
cartographer-webserver/: index.html  package-lock.json  package.json
cartographer-webserver/public/js_model/: model.json
cartographer-webserver/public/model_no_bn/: model.json
cartographer-webserver/src/: App.jsx
cartographer-webserver/wasm/: cartographer_exec.js  cartographer_exec.wasm
